<resources>

    <string name="app_name">Regnskapshuset</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Regnskapshuset</string>

    <string name="username">Brukerid</string>
    <string name="password">Passord</string>
    <string name="copyright">Copyright@2012\nwww.appsonite.com</string>
    
    <string name="contactus">Contact Us</string>
    <string name="email_username">Navn : </string>
    <string name="email_company">Bedrift : </string>
    <string name="email_address">Epost : </string>
    <string name="msg_text">Tekst : </string>
    
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    
    <string name="close">Close</string>
    
    <string name="no_media_warning">Storage Media not present</string>
    <string name="no_media_hint">Sharing the storage media with a PC can make it inaccessible</string>
    <string name="open_failed">Unable to open document</string>
    <string name="search_backwards">Search backwards</string>
    <string name="search_forwards">Search forwards</string>
    <string name="search_document">Search document</string>
    <string name="picker_title">MuPDF</string>
    <string name="outline_title">Table of Contents</string>
    <string name="enter_password">Enter Password</string>
    <string name="text_not_found">Text not found</string>
    <string name="searching_">Searching...</string>
    <string name="link_control">Link highlighting and enabling</string>
    <string name="no_further_occurences_found">No further occurences found</string>
    
    <string name="app_about">
        Regnskapshuset gir profesjonell bistand innen regnskap, lønn og økonomistyring for små og mellomstore bedrifter. Vi tilbyr også rådgivning og etablererveiledning.\n\nRegnskapshuset er et autorisert regnskapsførerselskap med 9 dyktige regnskapsførere med lang praksis tilpasset de fleste bransjer.\n\nOm du allerede har en etablert næringsvirksomhet eller går med planer om og starte en, så vil vi invitere deg til en gratis konsulenttime hos oss for og kartlegge dine behov, gi deg innledende rådgivning og eventuelt etablererveiledning.\n\nVi holder til helt sentralt i Oslo, ikke langt fra Stortinget, og våre kunder kan lett nå oss med buss, t-bane eller trikk.\n\nRegnskapshuset AS, Nedre Slottsgate 21, 0157 Oslo
 	</string>
</resources>