<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <ImageView 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/phone_about"/>

    <ImageView
        android:id="@+id/login_logoimg_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logo"
        android:contentDescription="@string/app_name"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="#ff0000"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/login_username_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/textfield"
        android:inputType="text"
        android:paddingLeft="5dp"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="#ff0000"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/login_password_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/textfield"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:textSize="20dp" >
    </EditText>

    <Button
        android:id="@+id/login_logbtn_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logbtn_bg"
        android:contentDescription="@string/app_name"
        android:text="Logg inn" />

</RelativeLayout>