<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/phone_about"
    android:gravity="left|top" >

    <ImageView
        android:id="@+id/contact_logo_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/contact_border_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/inputform_ipad"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:id="@+id/contact_layout_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="610" >

        <TextView
            android:id="@+id/contact_txtview_1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="120"
            android:gravity="top"
            android:text="@string/email_username"
            android:textColor="#800000"
            android:textSize="20dp"
            android:textStyle="bold"
            android:typeface="serif" />

        <EditText
            android:id="@+id/contact_name_id"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="490"
            android:background="@drawable/textfield"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contact_layout_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="610" >

        <TextView
            android:id="@+id/contact_txtview_2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="120"
            android:gravity="top"
            android:text="@string/email_company"
            android:textColor="#800000"
            android:textSize="20dp"
            android:textStyle="bold"
            android:typeface="serif" />

        <EditText
            android:id="@+id/contact_company_id"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="490"
            android:background="@drawable/textfield"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contact_layout_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="610" >

        <TextView
            android:id="@+id/contact_txtview_3"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="120"
            android:gravity="top"
            android:text="@string/email_address"
            android:textColor="#800000"
            android:textSize="20dp"
            android:textStyle="bold"
            android:typeface="serif" />

        <EditText
            android:id="@+id/contact_address_id"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="490"
            android:background="@drawable/textfield"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contact_layout_4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="610" >

        <TextView
            android:id="@+id/contact_txtview_4"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="120"
            android:gravity="top"
            android:text="@string/msg_text"
            android:textColor="#800000"
            android:textSize="20dp"
            android:textStyle="bold"
            android:typeface="serif" />

        <EditText
            android:id="@+id/contact_msg_id"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="490"
            android:background="@drawable/textfield1"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp" />
    </LinearLayout>

    <Button
        android:id="@+id/contact_mail_id"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:background="@drawable/logbtn_bg"
        android:text="Epost"
        android:textStyle="bold" >
    </Button>

</RelativeLayout>